// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerFooter component should match snapshot - DrawerFooter Custom children: DrawerFooter custom children snapshot 1`] = `
<div
  className="sc-bdfBwQ dYiTgz"
>
  <div>
    some custom children
  </div>
</div>
`;

exports[`DrawerFooter component should match snapshot - DrawerFooter custom component: DrawerFooter with custom component snapshot 1`] = `
<section
  className="sc-bdfBwQ dYiTgz"
>
  <div>
    some custom children
  </div>
</section>
`;
